@@ -321,13 +321,21 @@ specifier|protected
 name|TupleStream
 name|fullStream
 decl_stmt|;
-DECL|field|hashOn
+DECL|field|leftHashOn
 specifier|protected
 name|List
 argument_list|<
 name|String
 argument_list|>
-name|hashOn
+name|leftHashOn
+decl_stmt|;
+DECL|field|rightHashOn
+specifier|protected
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|rightHashOn
 decl_stmt|;
 DECL|field|hashedTuples
 specifier|protected
@@ -723,12 +731,6 @@ name|hashStream
 expr_stmt|;
 name|this
 operator|.
-name|hashOn
-operator|=
-name|hashOn
-expr_stmt|;
-name|this
-operator|.
 name|hashedTuples
 operator|=
 operator|new
@@ -736,6 +738,137 @@ name|HashMap
 argument_list|<>
 argument_list|()
 expr_stmt|;
+name|this
+operator|.
+name|leftHashOn
+operator|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+expr_stmt|;
+name|this
+operator|.
+name|rightHashOn
+operator|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+expr_stmt|;
+for|for
+control|(
+name|String
+name|hasher
+range|:
+name|hashOn
+control|)
+block|{
+name|String
+index|[]
+name|parts
+init|=
+name|hasher
+operator|.
+name|split
+argument_list|(
+literal|"="
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+literal|1
+operator|==
+name|parts
+operator|.
+name|length
+condition|)
+block|{
+name|String
+name|field
+init|=
+name|parts
+index|[
+literal|0
+index|]
+operator|.
+name|trim
+argument_list|()
+decl_stmt|;
+name|leftHashOn
+operator|.
+name|add
+argument_list|(
+name|field
+argument_list|)
+expr_stmt|;
+name|rightHashOn
+operator|.
+name|add
+argument_list|(
+name|field
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+literal|2
+operator|==
+name|parts
+operator|.
+name|length
+condition|)
+block|{
+name|leftHashOn
+operator|.
+name|add
+argument_list|(
+name|parts
+index|[
+literal|0
+index|]
+operator|.
+name|trim
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|rightHashOn
+operator|.
+name|add
+argument_list|(
+name|parts
+index|[
+literal|1
+index|]
+operator|.
+name|trim
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+name|String
+operator|.
+name|format
+argument_list|(
+name|Locale
+operator|.
+name|ROOT
+argument_list|,
+literal|"Invalid expression %s - invalid 'on' parameter - expecting 1 or more instances if 'field' or 'field=hashedField' but found '%s'"
+argument_list|,
+name|hasher
+argument_list|)
+argument_list|)
+throw|;
+block|}
+block|}
 block|}
 annotation|@
 name|Override
@@ -887,10 +1020,20 @@ argument_list|()
 decl_stmt|;
 for|for
 control|(
-name|String
-name|part
-range|:
-name|hashOn
+name|int
+name|idx
+init|=
+literal|0
+init|;
+name|idx
+operator|<
+name|leftHashOn
+operator|.
+name|size
+argument_list|()
+condition|;
+operator|++
+name|idx
 control|)
 block|{
 if|if
@@ -911,13 +1054,69 @@ literal|","
 argument_list|)
 expr_stmt|;
 block|}
+comment|// we know that left and right hashOns are the same size
+name|String
+name|left
+init|=
+name|leftHashOn
+operator|.
+name|get
+argument_list|(
+name|idx
+argument_list|)
+decl_stmt|;
+name|String
+name|right
+init|=
+name|rightHashOn
+operator|.
+name|get
+argument_list|(
+name|idx
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|left
+operator|.
+name|equals
+argument_list|(
+name|right
+argument_list|)
+condition|)
+block|{
 name|sb
 operator|.
 name|append
 argument_list|(
-name|part
+name|left
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+name|sb
+operator|.
+name|append
+argument_list|(
+name|left
+argument_list|)
+expr_stmt|;
+name|sb
+operator|.
+name|append
+argument_list|(
+literal|"="
+argument_list|)
+expr_stmt|;
+name|sb
+operator|.
+name|append
+argument_list|(
+name|right
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 name|expression
 operator|.
@@ -1138,6 +1337,8 @@ init|=
 name|calculateHash
 argument_list|(
 name|tuple
+argument_list|,
+name|rightHashOn
 argument_list|)
 decl_stmt|;
 if|if
@@ -1219,6 +1420,12 @@ name|calculateHash
 parameter_list|(
 name|Tuple
 name|tuple
+parameter_list|,
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|hashOn
 parameter_list|)
 block|{
 name|StringBuilder
@@ -1274,7 +1481,7 @@ argument_list|(
 literal|"::"
 argument_list|)
 expr_stmt|;
-comment|// this is here to seperate fields
+comment|// this is here to separate fields
 block|}
 return|return
 name|sb
@@ -1350,6 +1557,8 @@ init|=
 name|calculateHash
 argument_list|(
 name|fullTuple
+argument_list|,
+name|leftHashOn
 argument_list|)
 decl_stmt|;
 if|if
