@@ -325,10 +325,20 @@ argument_list|()
 decl_stmt|;
 for|for
 control|(
-name|String
-name|part
-range|:
-name|hashOn
+name|int
+name|idx
+init|=
+literal|0
+init|;
+name|idx
+operator|<
+name|leftHashOn
+operator|.
+name|size
+argument_list|()
+condition|;
+operator|++
+name|idx
 control|)
 block|{
 if|if
@@ -349,13 +359,69 @@ literal|","
 argument_list|)
 expr_stmt|;
 block|}
+comment|// we know that left and right hashOns are the same size
+name|String
+name|left
+init|=
+name|leftHashOn
+operator|.
+name|get
+argument_list|(
+name|idx
+argument_list|)
+decl_stmt|;
+name|String
+name|right
+init|=
+name|rightHashOn
+operator|.
+name|get
+argument_list|(
+name|idx
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|left
+operator|.
+name|equals
+argument_list|(
+name|right
+argument_list|)
+condition|)
+block|{
 name|sb
 operator|.
 name|append
 argument_list|(
-name|part
+name|left
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+name|sb
+operator|.
+name|append
+argument_list|(
+name|left
+argument_list|)
+expr_stmt|;
+name|sb
+operator|.
+name|append
+argument_list|(
+literal|"="
+argument_list|)
+expr_stmt|;
+name|sb
+operator|.
+name|append
+argument_list|(
+name|right
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 name|expression
 operator|.
@@ -421,6 +487,8 @@ init|=
 name|calculateHash
 argument_list|(
 name|fullTuple
+argument_list|,
+name|leftHashOn
 argument_list|)
 decl_stmt|;
 if|if
