@@ -11762,6 +11762,88 @@ operator|==
 literal|0
 operator|)
 assert|;
+comment|// Basic test with "on" mapping
+name|expression
+operator|=
+name|StreamExpressionParser
+operator|.
+name|parse
+argument_list|(
+literal|"hashJoin("
+operator|+
+literal|"search(collection1, q=\"side_s:left\", fl=\"id,join1_i,join3_i,ident_s\", sort=\"join1_i asc, join3_i asc, id asc\"),"
+operator|+
+literal|"hashed=search(collection1, q=\"side_s:right\", fl=\"join1_i,join3_i,ident_s\", sort=\"join1_i asc, join3_i asc\"),"
+operator|+
+literal|"on=\"join1_i=join3_i\")"
+argument_list|)
+expr_stmt|;
+name|stream
+operator|=
+operator|new
+name|HashJoinStream
+argument_list|(
+name|expression
+argument_list|,
+name|factory
+argument_list|)
+expr_stmt|;
+name|tuples
+operator|=
+name|getTuples
+argument_list|(
+name|stream
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|17
+argument_list|,
+name|tuples
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertOrder
+argument_list|(
+name|tuples
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+literal|2
+argument_list|,
+literal|2
+argument_list|,
+literal|15
+argument_list|,
+literal|15
+argument_list|,
+literal|3
+argument_list|,
+literal|3
+argument_list|,
+literal|3
+argument_list|,
+literal|4
+argument_list|,
+literal|4
+argument_list|,
+literal|4
+argument_list|,
+literal|5
+argument_list|,
+literal|5
+argument_list|,
+literal|5
+argument_list|,
+literal|6
+argument_list|,
+literal|7
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Test
@@ -12406,6 +12488,74 @@ argument_list|(
 name|tuples
 argument_list|,
 literal|1
+argument_list|,
+literal|15
+argument_list|,
+literal|2
+argument_list|,
+literal|3
+argument_list|,
+literal|4
+argument_list|,
+literal|5
+argument_list|,
+literal|6
+argument_list|,
+literal|7
+argument_list|)
+expr_stmt|;
+comment|// Basic test
+name|expression
+operator|=
+name|StreamExpressionParser
+operator|.
+name|parse
+argument_list|(
+literal|"outerHashJoin("
+operator|+
+literal|"search(collection1, q=\"side_s:left\", fl=\"id,join1_i,join2_s,ident_s\", sort=\"join1_i asc, join2_s asc, id asc\"),"
+operator|+
+literal|"hashed=search(collection1, q=\"side_s:right\", fl=\"join3_i,join2_s,ident_s\", sort=\"join2_s asc\"),"
+operator|+
+literal|"on=\"join1_i=join3_i, join2_s\")"
+argument_list|)
+expr_stmt|;
+name|stream
+operator|=
+operator|new
+name|OuterHashJoinStream
+argument_list|(
+name|expression
+argument_list|,
+name|factory
+argument_list|)
+expr_stmt|;
+name|tuples
+operator|=
+name|getTuples
+argument_list|(
+name|stream
+argument_list|)
+expr_stmt|;
+assert|assert
+operator|(
+name|tuples
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|10
+operator|)
+assert|;
+name|assertOrder
+argument_list|(
+name|tuples
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+literal|15
 argument_list|,
 literal|15
 argument_list|,
